# hw-profiler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: runtime_profile_example.py
src/hw_profiler/: __init__.py  cli.py  core.py  gpu_monitor.py  hardware.py  torch_profiler.py
tests/: test_import.py
